--- a/StudiGO.Web/Pages/Shared/_Layout.cshtml
+++ b/StudiGO.Web/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - StudiGO</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/StudiGO.styles.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/StudiGO.Web.styles.css" asp-append-version="true"/>
 </head>
 <body>
 <header>
