--- a/StudiGO.Web/Pages/Shared/_Layout.cshtml
+++ b/StudiGO.Web/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,12 @@
 </head>
 <body>
 <header>
-
+    <div class="header_content">
+        <div class="header_logo">
+            <div></div>
+            <span>StudiGO</span>
+        </div>
+    </div>
 </header>
 
 <main>
