feat: Split up layout css

--- a/StudiGO.Web/wwwroot/css/layout.css
+++ b/StudiGO.Web/wwwroot/css/layout.css
@@ -42,4 +42,4 @@ header .header_content .header_logo span {
   font-size: 32px;
 }
 
-/*# sourceMappingURL=site.css.map */
+/*# sourceMappingURL=layout.css.map */
