--- a/StudiGO.Web/Pages/Shared/_Layout.cshtml
+++ b/StudiGO.Web/Pages/Shared/_Layout.cshtml
@@ -4,8 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>StudiGO</title>
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/StudiGO.Web.styles.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true"/>
 </head>
 <body>
 <header>
