feat: Added banner

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -3,3 +3,17 @@
 @{
     ViewData["Title"] = "Home page";
 }
+
+<div class="main_banner">
+    <div class="banner_tabs">
+        <div class="banner_tabs-selected">
+            <span>Reisplanner</span>
+        </div>
+        <div>
+            <span>Schoolrooster</span>
+        </div>
+    </div>
+    <div class="banner">
+        
+    </div>
+</div>
