--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -2,27 +2,37 @@
   
   .banner_tabs
     width: 100%
-    height: 45px
+    height: 48px
     display: flex
     background-color: white
+    align-items: flex-end
     
     div
       width: 50%
-      margin-top: 5px
+      height: 44px
       background-color: lightgray
       display: flex
       align-items: center
       padding: 0 10px
       color: white
+      cursor: pointer
+      transition: 0.3s
       
       &:nth-child(1)
         justify-content: flex-end
+        
+        &.banner_tabs-selected
+          border-radius: 0 4px 0 0
       
       &:nth-child(2)
         justify-content: flex-start
 
+        &.banner_tabs-selected
+          border-radius: 4px 0 0 0
+
     .banner_tabs-selected
-      margin-top: 0
+      height: 48px
+      padding-top: 4px
       background-color: gray
       
   .banner
