--- a/StudiGO.Web/Styles/layout.sass
+++ b/StudiGO.Web/Styles/layout.sass
@@ -43,3 +43,11 @@ header
       span
         font-weight: 600
         font-size: 32px
+
+main
+  min-height: 800px // temporary
+    
+footer
+  width: 100%
+  height: 400px
+  background-color: $footer
