--- a/StudiGO.Web/wwwroot/css/layout.css
+++ b/StudiGO.Web/wwwroot/css/layout.css
@@ -42,4 +42,14 @@ header .header_content .header_logo span {
   font-size: 32px;
 }
 
+main {
+  min-height: 800px;
+}
+
+footer {
+  width: 100%;
+  height: 400px;
+  background-color: #606060;
+}
+
 /*# sourceMappingURL=layout.css.map */
