feat: Made search reusable

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
 @model IndexModel
 
-<input id="input" type="text" name="query" />
-<button id="button" type="submit">Zoeken</button>
+<div class="stations-search">
+    <input type="text" name="query" />
+    <div class="stations-search_results"></div>
+    <button>Zoeken</button>
+</div>
