feat: Added asynchronous handling for input

--- a/StudiGO.Web/Pages/Shared/_Layout.cshtml
+++ b/StudiGO.Web/Pages/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>StudiGO</title>
     <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/stations.css" asp-append-version="true"/>
 </head>
 <body>
 <header>
