feat: Added selection with proper event handling

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -2,6 +2,6 @@
 @model IndexModel
 
 <div class="stations-search">
-    <input type="text" name="query" />
+    <input type="text" name="query" autocomplete="off"/>
     <div class="stations-search_results"></div>
 </div>
