fix: Fixed the inputs displaying the results individually

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -5,3 +5,8 @@
     <input type="text" name="query" autocomplete="off"/>
     <div class="stations-search_results"></div>
 </div>
+
+<div class="stations-search">
+    <input type="text" name="query" autocomplete="off"/>
+    <div class="stations-search_results"></div>
+</div>
