feat: Added planner tab

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -11,14 +11,21 @@
         </div>
     </div>
     <div class="banner">
-        <div class="stations-search">
-            <input type="text" name="query" autocomplete="off"/>
-            <div class="stations-search_results"></div>
-        </div>
-        
-        <div class="stations-search">
-            <input type="text" name="query" autocomplete="off"/>
-            <div class="stations-search_results"></div>
+        <div class="banner_planner">
+            <h1>Plan je reis</h1>
+            <div class="planner">
+                <div class="planner_search">
+                    <div class="stations-search">
+                        <input type="text" name="query" autocomplete="off"/>
+                        <div class="stations-search_results"></div>
+                    </div>
+
+                    <div class="stations-search">
+                        <input type="text" name="query" autocomplete="off"/>
+                        <div class="stations-search_results"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
