--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -39,3 +39,23 @@
     width: 100%
     height: 300px
     background-color: gray
+    display: flex
+    justify-content: center
+    
+    .banner_planner
+      width: 1100px
+      
+      h1
+        font-weight: 600
+        color: white
+      
+      .planner
+        padding: 10px 0
+        
+        .planner_search
+          width: 100%
+          display: flex
+          justify-content: space-between
+          
+          .stations-search
+            width: 530px
