--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -37,6 +37,26 @@
   width: 100%;
   height: 300px;
   background-color: gray;
+  display: flex;
+  justify-content: center;
+}
+.main_banner .banner .banner_planner {
+  width: 1100px;
+}
+.main_banner .banner .banner_planner h1 {
+  font-weight: 600;
+  color: white;
+}
+.main_banner .banner .banner_planner .planner {
+  padding: 10px 0;
+}
+.main_banner .banner .banner_planner .planner .planner_search {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.main_banner .banner .banner_planner .planner .planner_search .stations-search {
+  width: 530px;
 }
 
 /*# sourceMappingURL=main.css.map */
