feat: Default font-size

--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -1,3 +1,5 @@
+$default_fontsize: 14px
+
 .main_banner
   
   .banner_tabs
@@ -47,6 +49,7 @@
       
       h1
         font-weight: 600
+        font-size: 32px
         color: white
       
       .planner
