--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -45,6 +45,7 @@
 }
 .main_banner .banner .banner_planner h1 {
   font-weight: 600;
+  font-size: 32px;
   color: white;
 }
 .main_banner .banner .banner_planner .planner {
