--- a/StudiGO.Web/Styles/stations.sass
+++ b/StudiGO.Web/Styles/stations.sass
@@ -1,3 +1,5 @@
+$default_fontsize: 14px
+
 .stations-search
   width: 300px
   position: relative
@@ -6,8 +8,8 @@
     width: 100%
     height: 40px
     padding: 0 10px
-    font-size: 12px
-    margin-bottom: 10px
+    font-size: $default_fontsize
+    margin-bottom: 5px
     border-radius: 5px
     border: 0
     
@@ -22,12 +24,12 @@
     
     div
       width: 100%
-      height: 40px
+      height: 50px
       display: flex
       align-items: center
       text-overflow: ellipsis
       padding: 0 10px
-      font-size: 12px
+      font-size: $default_fontsize
       transition: 0.3s
       
       &:hover
