feat: Added labels to inputs

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -16,12 +16,16 @@
             <div class="planner">
                 <div class="planner_search">
                     <div class="stations-search">
-                        <input type="text" name="query" autocomplete="off"/>
+                        <label for="from">van</label>
+                        <input id="from" type="text" name="query" autocomplete="off" placeholder="station of stad"/>
                         <div class="stations-search_results"></div>
                     </div>
-
+                    
+                    <div class="planner_switch"></div>
+                    
                     <div class="stations-search">
-                        <input type="text" name="query" autocomplete="off"/>
+                        <label for="from">naar</label>
+                        <input type="text" name="query" autocomplete="off" placeholder="station of stad"/>
                         <div class="stations-search_results"></div>
                     </div>
                 </div>
