--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -45,7 +45,9 @@ $default_fontsize: 14px
     justify-content: center
     
     .banner_planner
-      width: 1100px
+      width: 100%
+      max-width: 1120px
+      padding: 0 20px
       
       h1
         font-weight: 600
@@ -53,12 +55,33 @@ $default_fontsize: 14px
         color: white
       
       .planner
-        padding: 10px 0
         
         .planner_search
           width: 100%
+          height: 55px
           display: flex
           justify-content: space-between
+          align-items: center
           
           .stations-search
-            width: 530px
+            flex: 1
+            
+            input
+              padding: 0 10px 0 50px
+            
+            label
+              width: 50px
+              height: 100%
+              position: absolute
+              display: flex
+              justify-content: center
+              align-items: center
+              font-weight: 600
+              font-size: $default_fontsize
+            
+          .planner_switch
+            width: 55px
+            height: 55px
+            border-radius: 55px
+            background-color: darkgray
+            margin: 0 20px
