--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -41,23 +41,44 @@
   justify-content: center;
 }
 .main_banner .banner .banner_planner {
-  width: 1100px;
+  width: 100%;
+  max-width: 1120px;
+  padding: 0 20px;
 }
 .main_banner .banner .banner_planner h1 {
   font-weight: 600;
   font-size: 32px;
   color: white;
 }
-.main_banner .banner .banner_planner .planner {
-  padding: 10px 0;
-}
 .main_banner .banner .banner_planner .planner .planner_search {
   width: 100%;
+  height: 55px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .main_banner .banner .banner_planner .planner .planner_search .stations-search {
-  width: 530px;
+  flex: 1;
+}
+.main_banner .banner .banner_planner .planner .planner_search .stations-search input {
+  padding: 0 10px 0 50px;
+}
+.main_banner .banner .banner_planner .planner .planner_search .stations-search label {
+  width: 50px;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 14px;
+}
+.main_banner .banner .banner_planner .planner .planner_search .planner_switch {
+  width: 55px;
+  height: 55px;
+  border-radius: 55px;
+  background-color: darkgray;
+  margin: 0 20px;
 }
 
 /*# sourceMappingURL=main.css.map */
