--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -1,6 +1,6 @@
 $default_fontsize: 14px
 
-.main_banner
+.banner
   
   .banner_tabs
     width: 100%
@@ -37,7 +37,7 @@ $default_fontsize: 14px
       padding-top: 4px
       background-color: gray
       
-  .banner
+  .banner_content
     width: 100%
     height: 300px
     background-color: gray
@@ -63,7 +63,7 @@ $default_fontsize: 14px
           justify-content: space-between
           align-items: center
           
-          .stations-search
+          .stations_search
             flex: 1
             
             input
