--- a/StudiGO.Web/wwwroot/css/stations.css
+++ b/StudiGO.Web/wwwroot/css/stations.css
@@ -1,8 +1,8 @@
-.stations-search {
+.stations_search {
   width: 300px;
   position: relative;
 }
-.stations-search input {
+.stations_search input {
   width: 100%;
   height: 40px;
   padding: 0 10px;
@@ -10,7 +10,7 @@
   border-radius: 5px;
   border: 0;
 }
-.stations-search .stations-search_results {
+.stations_search .stations_results {
   width: 100%;
   max-height: 200px;
   overflow-y: scroll;
@@ -19,7 +19,7 @@
   position: absolute;
   z-index: 99;
 }
-.stations-search .stations-search_results div {
+.stations_search .stations_results div {
   width: 100%;
   height: 50px;
   display: flex;
@@ -29,7 +29,7 @@
   font-size: 14px;
   transition: 0.3s;
 }
-.stations-search .stations-search_results div:hover {
+.stations_search .stations_results div:hover {
   background-color: cornflowerblue;
   color: white;
   cursor: pointer;
