--- a/StudiGO.Web/Styles/stations.sass
+++ b/StudiGO.Web/Styles/stations.sass
@@ -1,6 +1,6 @@
 $default_fontsize: 14px
 
-.stations-search
+.stations_search
   width: 300px
   position: relative
   
@@ -12,7 +12,7 @@ $default_fontsize: 14px
     border-radius: 5px
     border: 0
     
-  .stations-search_results
+  .stations_results
     width: 100%
     max-height: 200px
     overflow-y: scroll
