feat: Added tab logic

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -3,10 +3,10 @@
 
 <div class="banner">
     <div class="banner_tabs">
-        <div class="banner_tabs-selected">
+        <div id="planner" class="banner_tabs-selected">
             <span>Reisplanner</span>
         </div>
-        <div>
+        <div id="schedule">
             <span>Schoolrooster</span>
         </div>
     </div>
@@ -31,5 +31,7 @@
                 </div>
             </div>
         </div>
+        
+        <div class="banner_schedule"></div>
     </div>
 </div>
