feat: Added little space between result

--- a/StudiGO.Web/Styles/stations.sass
+++ b/StudiGO.Web/Styles/stations.sass
@@ -20,6 +20,7 @@ $default_fontsize: 14px
     border-radius: 5px
     position: absolute
     z-index: 99
+    margin-top: 5px
     
     div
       width: 100%
