--- a/StudiGO.Web/wwwroot/css/stations.css
+++ b/StudiGO.Web/wwwroot/css/stations.css
@@ -18,6 +18,7 @@
   border-radius: 5px;
   position: absolute;
   z-index: 99;
+  margin-top: 5px;
 }
 .stations_search .stations_results div {
   width: 100%;
