--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -13,23 +13,36 @@
     <div class="banner_content">
         <div class="banner_planner">
             <h1>Plan je reis</h1>
-            <div class="planner">
+            <form class="planner">
                 <div class="planner_search">
                     <div class="stations_search">
-                        <label for="from">van</label>
-                        <input id="from" type="text" name="query" autocomplete="off" placeholder="station of stad"/>
+                        <label>van</label>
+                        <input type="text" name="from" autocomplete="off" placeholder="station of stad"/>
                         <div class="stations_results"></div>
                     </div>
                     
                     <div class="planner_switch"></div>
                     
                     <div class="stations_search">
-                        <label for="from">naar</label>
-                        <input type="text" name="query" autocomplete="off" placeholder="station of stad"/>
+                        <label>naar</label>
+                        <input type="text" name="to" autocomplete="off" placeholder="station of stad"/>
                         <div class="stations_results"></div>
                     </div>
                 </div>
-            </div>
+                <div class="planner_buttons">
+                    <div class="planner_date">
+                        <input id="date" type="date"/>
+                    </div>
+
+                    <div class="planner_time">
+                        <input id="time" type="time"/>
+                    </div>
+                    
+                    <input id="datetime" name="datetime" type="hidden"/>
+                    
+                    <input type="submit" value="Submit"/>
+                </div>
+            </form>
         </div>
         
         <div class="banner_schedule"></div>
