feat: Added element for trip results

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -46,3 +46,7 @@
         <div class="banner_schedule"></div>
     </div>
 </div>
+
+<div class="trips">
+    <div class="trips_results"></div>
+</div>
