--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -85,3 +85,17 @@ $default_fontsize: 14px
             border-radius: 55px
             background-color: darkgray
             margin: 0 20px
+            
+.trips
+  width: 100%
+  min-height: 400px
+  display: flex
+  justify-content: center
+
+  .trips_results
+    width: 100%
+    max-width: 1120px
+    background-color: lightgray
+    padding: 0 20px
+    
+    
