--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -81,4 +81,17 @@
   margin: 0 20px;
 }
 
+.trips {
+  width: 100%;
+  min-height: 400px;
+  display: flex;
+  justify-content: center;
+}
+.trips .trips_results {
+  width: 100%;
+  max-width: 1120px;
+  background-color: lightgray;
+  padding: 0 20px;
+}
+
 /*# sourceMappingURL=main.css.map */
