--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -39,10 +39,10 @@ $default_fontsize: 14px
       
   .banner_content
     width: 100%
-    height: 300px
     background-color: gray
     display: flex
     justify-content: center
+    padding-bottom: 50px
     
     .banner_planner
       width: 100%
@@ -92,10 +92,18 @@ $default_fontsize: 14px
   display: flex
   justify-content: center
 
-  .trips_results
+  .trips_content
     width: 100%
     max-width: 1120px
-    background-color: lightgray
     padding: 0 20px
     
-    
+    .trips_results
+      width: 50%
+      padding-top: 20px
+      
+      .trips_result
+        width: 100%
+        height: 80px
+        background-color: white
+        margin-bottom: 20px
+        border-radius: 4px
