--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -35,10 +35,10 @@
 }
 .banner .banner_content {
   width: 100%;
-  height: 300px;
   background-color: gray;
   display: flex;
   justify-content: center;
+  padding-bottom: 50px;
 }
 .banner .banner_content .banner_planner {
   width: 100%;
@@ -87,11 +87,21 @@
   display: flex;
   justify-content: center;
 }
-.trips .trips_results {
+.trips .trips_content {
   width: 100%;
   max-width: 1120px;
-  background-color: lightgray;
   padding: 0 20px;
+}
+.trips .trips_content .trips_results {
+  width: 50%;
+  padding-top: 20px;
+}
+.trips .trips_content .trips_results .trips_result {
+  width: 100%;
+  height: 80px;
+  background-color: white;
+  margin-bottom: 20px;
+  border-radius: 4px;
 }
 
 /*# sourceMappingURL=main.css.map */
