feat: Added time results

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -51,12 +51,23 @@
 <div class="trips">
     <div class="trips_content">
         <div class="trips_results">
-            @foreach (var trip in Model.Trips.trips)
-            {
-                <div class="trips_result">
-                    @trip.Legs[0].Origin.PlannedDateTime
-                </div>
-            }
+            @if (Model.Trips != null) {
+                @foreach (var trip in Model.Trips.trips)
+                {
+                    <div class="trips_result">
+                        <div class="trips_row">
+                            <div class="trips_times">
+                                <span class="trips_timespan">@trip.Legs[0].Origin.PlannedDateTime.ToString("HH:mm")</span>
+                                <span>></span>
+                                <span class="trips_timespan">@trip.Legs[^1].Origin.PlannedDateTime.ToString("HH:mm")</span>
+                            </div>
+                            <div class="trip_info">
+                                <span>@trip.PlannedDurationInMinutes</span>
+                                <span>@trip.Transfers</span>
+                            </div>
+                        </div>
+                    </div>
+                }}
         </div>
     </div>
 </div>
