--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -107,3 +107,19 @@ $default_fontsize: 14px
         background-color: white
         margin-bottom: 20px
         border-radius: 4px
+        padding: 0 20px
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        
+        .trips_row
+          width: 100%
+          display: flex
+          justify-content: space-between
+          
+          .trips_times
+            
+            .trips_timespan
+              font-size: 16px
+              font-weight: 600
