feat: Added session for retaining search terms

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -18,7 +18,7 @@
                 <div class="planner_search">
                     <div class="stations_search">
                         <label>van</label>
-                        <input type="text" name="fromStation" autocomplete="off" placeholder="station of stad" required/>
+                        <input type="text" id="fromStation" name="fromStation" autocomplete="off" placeholder="station of stad" required/>
                         <div class="stations_results"></div>
                     </div>
 
@@ -26,7 +26,7 @@
 
                     <div class="stations_search">
                         <label>naar</label>
-                        <input type="text" name="toStation" autocomplete="off" placeholder="station of stad" required/>
+                        <input type="text" id="toStation" name="toStation" autocomplete="off" placeholder="station of stad" required/>
                         <div class="stations_results"></div>
                     </div>
                 </div>
