--- a/StudiGO.Web/Pages/Shared/_Layout.cshtml
+++ b/StudiGO.Web/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/js/main.js" asp-append-version="true"></script>
 <script src="~/js/stations.js" asp-append-version="true"></script>
+<script src="~/js/planner.js" asp-append-version="true"></script>
 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
