feat: Added input switch

--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -85,6 +85,7 @@ $default_fontsize: 14px
             border-radius: 55px
             background-color: darkgray
             margin: 0 20px
+            cursor: pointer
             
 .trips
   width: 100%
