feat: Reworked DTO integration

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -52,7 +52,7 @@
     <div class="trips_content">
         <div class="trips_results">
             @if (Model.Trips != null) {
-                @foreach (var trip in Model.Trips.trips)
+                @foreach (var trip in Model.Trips)
                 {
                     <div class="trips_result">
                         <div class="trips_row">
