--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -96,11 +96,12 @@ $default_fontsize: 14px
   .trips_content
     width: 100%
     max-width: 1120px
-    padding: 0 20px
+    padding: 20px
+    display: flex
     
     .trips_results
       width: 50%
-      padding-top: 20px
+      margin-right: 10px
       
       .trips_result
         width: 100%
@@ -122,5 +123,73 @@ $default_fontsize: 14px
           .trips_times
             
             .trips_timespan
-              font-size: 16px
+              font-size: 18px
               font-weight: 600
+    
+    .trips_details
+      width: 50%
+      background-color: white
+      margin-bottom: 20px
+      border-radius: 4px
+      margin-left: 10px
+      
+      .trips_title
+        width: 100%
+        height: 60px
+        padding: 0 20px
+        font-size: 18px
+        display: flex
+        align-items: center
+        font-weight: 600
+        
+      .trips_legs
+        width: 100%
+        height: auto
+        
+        .trips_leg
+          width: 100%
+          height: 200px
+          display: flex
+          padding-bottom: 40px
+          
+          .trips_legtimes
+            width: 100px
+            height: 100%
+            display: flex
+            justify-content: space-between
+            align-items: center
+            flex-direction: column
+              
+            span
+              font-size: 18px
+              font-weight: 600
+              
+              &:nth-child(1)
+                position: relative
+                top: -5px
+                
+              &:nth-child(2)
+                position: relative
+                bottom: -5px
+              
+          .trips_graphic
+            height: 100%
+            display: flex
+            justify-content: space-between
+            flex-direction: column
+            align-items: center
+            position: relative
+            
+            .trips_pin
+              width: 13px
+              height: 13px
+              border-radius: 13px
+              background-color: white
+              border: 3px solid black
+              z-index: 1
+              
+            .trips_line
+              width: 3px
+              height: 100%
+              position: absolute
+              background-color: black
