--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -91,11 +91,12 @@
 .trips .trips_content {
   width: 100%;
   max-width: 1120px;
-  padding: 0 20px;
+  padding: 20px;
+  display: flex;
 }
 .trips .trips_content .trips_results {
   width: 50%;
-  padding-top: 20px;
+  margin-right: 10px;
 }
 .trips .trips_content .trips_results .trips_result {
   width: 100%;
@@ -115,8 +116,76 @@
   justify-content: space-between;
 }
 .trips .trips_content .trips_results .trips_result .trips_row .trips_times .trips_timespan {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
+}
+.trips .trips_content .trips_details {
+  width: 50%;
+  background-color: white;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  margin-left: 10px;
+}
+.trips .trips_content .trips_details .trips_title {
+  width: 100%;
+  height: 60px;
+  padding: 0 20px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+}
+.trips .trips_content .trips_details .trips_legs {
+  width: 100%;
+  height: auto;
+}
+.trips .trips_content .trips_details .trips_legs .trips_leg {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  padding-bottom: 40px;
+}
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_legtimes {
+  width: 100px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_legtimes span {
+  font-size: 18px;
+  font-weight: 600;
+}
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_legtimes span:nth-child(1) {
+  position: relative;
+  top: -5px;
+}
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_legtimes span:nth-child(2) {
+  position: relative;
+  bottom: -5px;
+}
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_graphic {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_graphic .trips_pin {
+  width: 13px;
+  height: 13px;
+  border-radius: 13px;
+  background-color: white;
+  border: 3px solid black;
+  z-index: 1;
+}
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_graphic .trips_line {
+  width: 3px;
+  height: 100%;
+  position: absolute;
+  background-color: black;
 }
 
 /*# sourceMappingURL=main.css.map */
