--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -150,7 +150,6 @@ $default_fontsize: 14px
           width: 100%
           height: 200px
           display: flex
-          padding-bottom: 40px
           
           .trips_legtimes
             width: 100px
@@ -193,3 +192,27 @@ $default_fontsize: 14px
               height: 100%
               position: absolute
               background-color: black
+        
+        .trips_transfer
+          width: 100%
+          height: 80px
+          display: flex
+            
+          .trips_transfer_icon
+            width: 100px
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+            
+          .trips_transfer_graphic
+            width: 13px
+            height: 100%
+            display: flex
+            justify-content: center
+            
+            div
+              width: 3px
+              height: 100%
+              background-color: gray
+                
