--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -78,6 +78,17 @@
                 @if (Model.Trips != null) {
                     @foreach (var leg in Model.Trips[0].Legs)
                     {
+                        @if (leg != Model.Trips[0].Legs.First())
+                        {
+                            <div class="trips_transfer">
+                                <div class="trips_transfer_icon">
+                                    
+                                </div>
+                                <div class="trips_transfer_graphic">
+                                    <div></div>
+                                </div>
+                            </div>
+                        }
                         <div class="trips_leg">
                             <div class="trips_legtimes">
                                 <span>@leg.Origin.PlannedDateTime.ToString("HH:mm")</span>
@@ -89,18 +100,6 @@
                                 <div class="trips_pin"></div>
                             </div>
                         </div>
-                        
-                        @if (leg != Model.Trips[0].Legs.Last())
-                        {
-                            <div class="trips_transfer">
-                                <div class="trips_transfer_icon">
-                                    
-                                </div>
-                                <div class="trips_transfer_graphic">
-                                    <div></div>
-                                </div>
-                            </div>
-                        }
                     }
                 }
             </div>
