--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -103,14 +103,20 @@
                                 <div class="trips_pin"></div>
                             </div>
                             <div class="trips_info">
-                                <span class="trips_station">@leg.Origin.Name</span>
+                                <div class="trips_station">
+                                    <span>@leg.Origin.Name</span>
+                                    <span class="trips_track">Spoor @leg.Origin.PlannedTrack</span>
+                                </div>
                                 <div class="trips_notes">
                                     @foreach (var note in leg.Product.Notes)
                                     {
                                         <span>@note[0].Value</span>
                                     }
                                 </div>
-                                <span class="trips_station">@leg.Destination.Name</span>
+                                <div class="trips_station">
+                                    <span>@leg.Destination.Name</span>
+                                    <span class="trips_track">Spoor @leg.Destination.PlannedTrack</span>
+                                </div>
                             </div>
                         </div>
                     }
